# Factor-Alpha

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  factor_alpha.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
notebooks/: factor_alpha_momentum.ipynb
src/: backtest.py  data.py  factors.py  main.py  metrics.py
tests/: conftest.py  test_alignment.py
