[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "factor-alpha"
version = "0.1.0"
description = "Momentum & Multifactor backtesting toolkit"
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "numpy",
  "matplotlib",
  "yfinance",
  "lxml",
  "requests",
  "pyyaml",
  "pyarrow",
]

[project.scripts]
factor-alpha = "src.main:main"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B","SIM","PL"]
ignore = ["E203","E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --maxfail=1"
